@@ -10,6 +10,7 @@
 #                         University of Stuttgart.  All rights reserved.
 # Copyright (c) 2004-2005 The Regents of the University of California.
 #                         All rights reserved.
+# Copyright (c) 2006      Cisco Systems, Inc.  All rights reserved.
 # $COPYRIGHT$
 # 
 # Additional copyrights may follow
@@ -32,11 +33,30 @@ AC_DEFUN([OMPI_CHECK_TM],[
                  [ompi_check_tm_dir="$with_tm"],
                  [ompi_check_tm_dir=""])])
 
+    # Note that Torque 2.1.0 changed the name of their back-end
+    # library to "libtorque".  So we have to check for both libpbs and
+    # libtorque.  First, check for libpbs.
+
     AS_IF([test "$ompi_check_tm_happy" = "yes"],
           [OMPI_CHECK_PACKAGE([$1],
                               [tm.h],
                               [pbs],
                               [tm_init],
+                              [],
+                              [$ompi_check_tm_dir],
+                              [],
+                              [ompi_check_tm_happy="yes"],
+                              [ompi_check_tm_happy="no"])])
+
+    # If that failed, check for libtorque.  Admittedly, this is
+    # sub-optimal -- the above may have failed because tm.h was not
+    # found.  If so, we'll check for it again.  Life is hard.
+
+    AS_IF([test "$ompi_check_tm_happy" = "no"],
+          [OMPI_CHECK_PACKAGE([$1],
+                              [tm.h],
+                              [torque],
+                              [tm_finalize],
                               [],
                               [$ompi_check_tm_dir],
                               [],
